2004-01-15 Benoit Regrain
     * vtk/vtkGdcmReader.cxx : bug fix : before, with python only, the program
       made a fatal error because of the memory release at the end of program.
       The problem was in vtkGdcmReader::ExecuteData where we were allocate
       some memory and vtk seems to have some problems with that.
     * src/gdcmHeaderEntrySet.cxx : bug fix for std lib and cout

2004-01-14 Benoit Regrain
     * src/gdcmHeaderEntry.[h|cxx] : gdcmElValue -> gdcmHeaderEntry
     * src/gdcmHeaderEntrySet.[h|cxx] : gdcmElValSet -> gdcmHeaderEntrySet
     * src/*.[h|cxx] : make changes due to class name changes
     * gdcmPython/demo/*.py : bug fix due to method names

2004-01-13 Benoit Regrain
     * src/*.[h|cxx] : coding style
     * vtk/*.[h|cxx] : coding style

2004-01-13 Benoit Regrain
     * gdcmPython/testSuite.py : test the readable flag of file for tests
     * src/gdcmDict.cxx, gdcmElValSet.cxx : bug fix under windows for prints.
       It's lied to the stl compilation by MSVC (windows, always windows...)
     * src/gdcmIdo.h, gdcmHeaderIdo.cxx : remove the Ido unused files

2004-01-12 Benoit Regrain
     * src/*.h : add comments
     * src/gdcmDictSet.h : set the method BuildDictPath in public
     * src/gdcmTS.cxx, gdcmVR.cxx : use now a dictionnary file other than to be
       directly setted in the source code
     * Dicts/dicomTS.dic, dicomVR.dic : 2 new dictionnary files loaded by
       gdcmTS and gdcmVR

2004-01-09 Benoit Regrain
     * gdcmPython/gdcmVersion.py : add a gdcmVERSION variable information
     * setup.py : use a reference to gdcmVERSION

2004-01-07 Benoit Regrain
     * Modification to compile with the distutils.
     * Bug fix in code

2003-12-10 Benoit Regrain
     * gdcmHeader is now aggregating gdcmFile, and not derived into. Thus, we
       can use a gdcmHeaderHelper to load datas
     * gdcmPython/testSuite.py : make the testSuite compliant with modifications
       made in the source code

2003-12-10 Benoit Regrain